# Text-Based-Game-Engine

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  engine.h
.cache/clangd/index/: achievement.cpp.72B685927B3F3BE8.idx  achievement.h.3F51B4CB4622395B.idx  animations.cpp.DA148D82F91AE68B.idx  animations.h.D0689928CF4DFC51.idx  boost_serialization_includes.h.AD992B4C59CFC900.idx  cli_kit.h.D16F185D79F64A49.idx  command.h.1F96FE53F25C2895.idx  engine.h.F4D29511E5638E87.idx  game_utils.cpp.5A12C15022451A37.idx  game_utils.h.30DB1DC8C78EBCAC.idx  inventory.cpp.3338B75976BFFA1B.idx  inventory.h.4059BF967515C47A.idx  item.cpp.11AF66526A987108.idx  item.h.05817874800B78E8.idx  map.cpp.9DD92EA6F3D14818.idx  map.h.12F5353C060C7D85.idx  menu.cpp.736A49C817E4354B.idx  menu.h.0A1C3EC64F4FB6EC.idx  menu_utils.cpp.12B14C741A795DEB.idx  menu_utils.h.02CCD59156E53A97.idx  mission.cpp.4BF2B65C01C273CE.idx  mission.h.D7E6D5E9EAA4CAE9.idx  node.cpp.CDF78B21132581AB.idx  node.h.281D6C2F8E0F8154.idx  objective.cpp.C1A15DA310E9F831.idx  objective.h.0A589FA89327D8D8.idx  player.cpp.91D4E18FCE5BE929.idx  player.h.ACD16ECE7509A67C.idx  progress.cpp.2C25DB8B5B74DFBD.idx  progress.h.4938DE7E59B8A390.idx  prompt.cpp.9C5342B62CC61982.idx  prompt.h.235E0658542CEB3B.idx  sound.cpp.8C758EF493EA52E7.idx  sound.h.C18AFFDE6D0E40A6.idx  text.cpp.D69B2D5B60684CA0.idx  text.h.9973802A36CBBD6C.idx
Engine/: CMakeLists.txt
Engine/boost/stage/lib/: libboost_serialization.so.1.82.0  libboost_wserialization.so.1.82.0
Engine/boost/stage/lib/cmake/boost_headers-1.82.0/: boost_headers-config.cmake
Engine/boost/stage/lib/cmake/boost_serialization-1.82.0/: boost_serialization-config.cmake  libboost_serialization-variant-shared.cmake  libboost_serialization-variant-static.cmake
Engine/boost/stage/lib/cmake/boost_wserialization-1.82.0/: boost_wserialization-config.cmake  libboost_wserialization-variant-shared.cmake  libboost_wserialization-variant-static.cmake
Engine/saves/: save.txt
Engine/src/: boost_serialization_includes.h  engine.h  main.cpp
Engine/src/achievements/: achievement.h
Engine/src/command/: command.h
Engine/src/item/: item.cpp  item.h
Engine/src/map/: map.cpp  map.h  node.h
Engine/src/menu/: menu.cpp  menu.h  menu_utils.cpp
Engine/src/mission/: mission.cpp  mission.h  objective.cpp  objective.h
Engine/src/movement/: movement.cpp  movement.h
Engine/src/node/: node.cpp  node.h
Engine/src/player/: inventory.cpp  inventory.h  player.cpp  player.h
Engine/src/progress/: progress.cpp  progress.h
Engine/src/text/: text.cpp  text.h
Engine/src/utils/: game_utils.cpp  game_utils.h  prompt.cpp  prompt.h  threads.cpp  threads.h
include/: achievement.h  boost_serialization_includes.h  command.h  game_utils.h  inventory.h  item.h  map.h  menu_utils.h  mission.h  node.h  objective.h  player.h  progress.h  prompt.h
src/achievements/: achievement.cpp
src/item/: item.cpp
src/map/: map.cpp
src/menu/: menu.cpp  menu_utils.cpp
src/mission/: mission.cpp  objective.cpp
src/node/: node.cpp
src/player/: player.cpp
src/text/: text.cpp
src/utils/: game_utils.cpp  prompt.cpp
